positive section updated

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
         <!-- Always keep a positive mindset -->
         <section class="positive-section">
+            <img src="images/watch.png" alt="">
             <div class="positive-mindset">
                 <h1>Awlays keep a positive <br> mindset</h1>
                 <button class="btn-call-now">Call Now</button>
