--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             <h1>My Plans</h1>
             <div class="plan-container">
                 <div class="single-plan">
-                    <img src="/images/icons/web.png" alt="">
+                    <img src="/images/icons/web.png" alt="web.png">
                     <h3>Web Development</h3>
                     <p>I want to start</p>
                 </div>
                 <div>
-                    <img src="/images//icons/js.png" alt="">
+                    <img src="/images/icons/js.png" alt="">
                     <h3>Javascript</h3>
                     <p>I want to learn</p>
                 </div>
