single plan background color and styles added

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
                     <h3>Web Development</h3>
                     <p>I want to start</p>
                 </div>
-                <div>
+                <div class="single-plan">
                     <img src="/images/icons/js.png" alt="">
                     <h3>Javascript</h3>
                     <p>I want to learn</p>
                 </div>
-                <div>
+                <div class="single-plan">
                     <img src="/images/icons/smoke.png" alt="">
                     <h3>Smoking Habit</h3>
                     <p>I want to end</p>
                 </div>
-                <div>
+                <div class="single-plan">
                     <img src="/images/icons/ecom.png" alt="">
                     <h3>E-commerce</h3>
                     <p>I want to develop</p>
