--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
             <h1>My Plans</h1>
             <div class="plan-container">
                 <div class="single-plan">
-                    <img src="./images/icons/web.png" alt="web.png">
+                    <img src="./images/watch.png" alt="web.png">
                     <h3>Web Development</h3>
                     <p>I want to start</p>
                 </div>
                 <div class="single-plan">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="./images/icons/js.png" alt="">
                     <h3>Javascript</h3>
                     <p>I want to learn</p>
                 </div>
                 <div class="single-plan">
-                    <img src="/images/icons/smoke.png" alt="">
+                    <img src="./images/icons/smoke.png" alt="">
                     <h3>Smoking Habit</h3>
                     <p>I want to end</p>
                 </div>
                 <div class="single-plan">
-                    <img src="/images/icons/ecom.png" alt="">
+                    <img src="./images/icons/ecom.png" alt="">
                     <h3>E-commerce</h3>
                     <p>I want to develop</p>
                 </div>
