single plan problem solbed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1>My Plans</h1>
             <div class="plan-container">
                 <div class="single-plan">
-                    <img src="./images/watch.png" alt="web.png">
+                    <img src="./images/icons/web.png" alt="web.png">
                     <h3>Web Development</h3>
                     <p>I want to start</p>
                 </div>
